--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <meta name="Occupation" class="staticSearch_feat" content="Education"></meta>
     <meta name="City" class="staticSearch_feat" content="Scarborough"></meta>
     <link href='https://fonts.googleapis.com/css?family=Abel' rel='stylesheet'></link>
-    <title>Darren Gale</title>
+    <title>Cat Bevan Game Audio</title>
     <link rel="stylesheet" href="main.css"></link>
     <style>
        /* Style the Image Used to Trigger the Modal */
