--- a/index.html
+++ b/index.html
@@ -68,6 +68,7 @@
     border-radius: 50%; /* Make the div circular */
     overflow: hidden; /* Hide any overflow */
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1); /* Optional: Add a shadow for better visual appeal */
+	justify-content: center;
 }
 
       </style>
