--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
   body {
           font-family: 'Abel';font-size: 14px;
-    background-color: #f0f0f0;
+    background-image: "studio-blurred.jpg";
   }
   .images {
     max-width: 1200px;
@@ -69,6 +69,7 @@
     overflow: hidden; /* Hide any overflow */
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1); /* Optional: Add a shadow for better visual appeal */
 	justify-content: center;
+	margin-bottom: 15px;
 }
 
       </style>
