--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
   body {
           font-family: 'Abel';font-size: 14px;
-    background-image: "studio-blurred.jpg";
+    background-image: "studio_blurred.jpg";
   }
   .images {
     max-width: 1200px;
