--- a/index.html
+++ b/index.html
@@ -85,16 +85,10 @@
 	<div style="margin-right: 22px;"><a href="/">HOME</a> | <a href="/cv">CV</a></div>
 </div>
 
-    
+<div class="banner" style="background-image: url('studio_blurred.jpg');">
     <div class = "titlebar">Cat Bevan Game Audio</div>
-
 	<div class="circular-frame" style="background-image: url('img_avatar.png');"></div>
-
-<meta name="Location" class="staticSearch_feat" content="Alberta - South" />
-
-<meta name="Occupation" class="staticSearch_feat" content="Industrial" />
-
-<meta name="City" class="staticSearch_feat" content="Lethbridge" />
+</div>
 
 <p class = "content">Thanks for checking out the site! It is in construction.</p>
 
