--- a/index.html
+++ b/index.html
@@ -70,6 +70,12 @@
 	margin: auto;
 	margin-bottom: 15px;
 }
+	    .banner {
+    background-size: cover; /* Ensure the banner image covers the entire div */
+    background-position: center; /* Center the banner image */
+    padding: 50px 20px; /* Adjust padding for the banner */
+    text-align: center; /* Center the content within the banner */
+}
 
       </style>
   </head>
