--- a/index.html
+++ b/index.html
@@ -50,6 +50,7 @@
     justify-content: center;
     text-align: center;
     font-weight: bold;
+	color: white;
   }
   .content {
     margin-top: 30px;
@@ -75,6 +76,7 @@
     background-position: center; /* Center the banner image */
     padding: 50px 20px; /* Adjust padding for the banner */
     text-align: center; /* Center the content within the banner */
+	margin-bottom: 15px;
 }
 
       </style>
@@ -95,5 +97,9 @@
 	<div class="circular-frame" style="background-image: url('img_avatar.png');"></div>
 </div>
 
-<p class = "content">Thanks for checking out the site! It is in construction.</p>
+<p class = "content">Thanks for checking out the site! It is still heavily under construction while I'm finishing my Masters.</p>
+
+<div class="titlebar"><iframe width="420" height="315"
+src="https://youtu.be/EQyq2HPA0jw">
+</iframe></div>
 
