--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
 
 <p class = "content">Thanks for checking out the site! It is still heavily under construction while I'm finishing my Masters.</p>
 
-<div class="titlebar"><iframe width="420" height="315"
-src="https://youtu.be/EQyq2HPA0jw">
-</iframe></div>
+<div class="titlebar"><iframe width="560" height="315" src="https://www.youtube-nocookie.com/embed/EQyq2HPA0jw?si=TIEE831uvFV31Dx3" 
+title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; 
+gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe></div>
 
