--- a/index.html
+++ b/index.html
@@ -99,7 +99,5 @@
 
 <p class = "content">Thanks for checking out the site! It is still heavily under construction while I'm finishing my Masters.</p>
 
-<div class="titlebar"> <video width="560" height="315" controls>
-  <source src="reel.mp4" type="video/mp4">
-</video> </div>
+<div class="titlebar"> <iframe width="560" height="315" src="https://www.youtube.com/embed/EQyq2HPA0jw?si=TIEE831uvFV31Dx3" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe></div>
 
