--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <meta name="Location" class="staticSearch_feat" content="Greater Toronto Area"></meta>
     <meta name="Occupation" class="staticSearch_feat" content="Education"></meta>
     <meta name="City" class="staticSearch_feat" content="Scarborough"></meta>
+<meta http-equiv="Content-Security-Policy" content="default-src 'self'; script-src 'self' https://www.youtube.com; frame-src https://www.youtube.com;">
     <link href='https://fonts.googleapis.com/css?family=Abel' rel='stylesheet'></link>
     <title>Cat Bevan Game Audio</title>
     <link rel="stylesheet" href="main.css"></link>
