--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
   .titlebar {
     margin-bottom: 5px;
     margin-top: 76px;
-    font-size: 2.3em;
+    font-size: 2.9em;
     justify-content: center;
     text-align: center;
     font-weight: bold;
@@ -99,7 +99,7 @@
 
 <p class = "content">Thanks for checking out the site! It is still heavily under construction while I'm finishing my Masters.</p>
 
-<div class="titlebar"> <iframe width="672" height="378" src="https://www.youtube.com/embed/EQyq2HPA0jw?si=TIEE831uvFV31Dx3" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe></div>
+<div class="titlebar"> <iframe style="margin-top: -20px;" width="672" height="378" src="https://www.youtube.com/embed/EQyq2HPA0jw?si=TIEE831uvFV31Dx3" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe></div>
 
 <p class = "content">Add me on Discord: <a href="https://discord.com/users/662411913195421758" target="_blank"><img src="discord.png" style="width:42px;height:42px;"></a></p>
 
