--- a/index.html
+++ b/index.html
@@ -101,5 +101,6 @@
 
 <div class="titlebar"> <iframe style="margin-top: -20px;" width="672" height="378" src="https://www.youtube.com/embed/EQyq2HPA0jw?si=TIEE831uvFV31Dx3" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe></div>
 
-<p class = "content">Add me on Discord: <a href="https://discord.com/users/662411913195421758" target="_blank"><img src="discord.png" style="width:42px;height:42px;margin-bottom:-15px;"></a></p>
-
+<p class = "content">Add me on Discord: <a href="https://discord.com/users/662411913195421758" target="_blank"><img src="discord.png" style="width:36px;height:36px;margin-bottom:-10px;"></a></p>
+<p class = "content">Send me an email at catbevan@pm.me: <a href="mailto:catbevan@pm.me" target="_blank"><img src="email.png" style="width:36px;height:36px;margin-bottom:-10px;"></a></p>
+<p class = "content">Check out more of my music on SoundCloud: <a href="soundcloud.com/cat-bevan-game-music" target="_blank"><img src="soundcloud.png" style="width:36px;height:36px;margin-bottom:-10px;"></a></p>  
