--- a/index.html
+++ b/index.html
@@ -103,4 +103,4 @@
 
 <p class = "content">Add me on Discord: <a href="https://discord.com/users/662411913195421758" target="_blank"><img src="discord.png" style="width:36px;height:36px;margin-bottom:-10px;"></a></p>
 <p class = "content">Send me an email at catbevan@pm.me: <a href="mailto:catbevan@pm.me" target="_blank"><img src="email.png" style="width:36px;height:36px;margin-bottom:-10px;"></a></p>
-<p class = "content">Check out more of my music on SoundCloud: <a href="soundcloud.com/cat-bevan-game-music" target="_blank"><img src="soundcloud.png" style="width:36px;height:36px;margin-bottom:-10px;"></a></p>  
+<p class = "content">Check out more of my music on SoundCloud: <a href="https://soundcloud.com/cat-bevan-game-music" target="_blank"><img src="soundcloud.png" style="width:36px;height:36px;margin-bottom:-10px;"></a></p>  
