--- a/index.html
+++ b/index.html
@@ -53,12 +53,10 @@
 	color: white;
   }
   .content {
-    margin-top: 30px;
     margin: auto;
     max-width: 1200px;
     font-size: 1.7em;
     text-align: justify;
-    margin-bottom: 75px;
   }
 	    .circular-frame {
     width: 200px; /* Set the desired width */
@@ -97,10 +95,10 @@
 	<div class="circular-frame" style="background-image: url('img_avatar.png');"></div>
 </div>
 
-<p class = "content">Thanks for checking out the site! It is still heavily under construction while I'm finishing my Masters.</p>
+<p class = "content" style="margin-top: 30px;margin-bottom: 50px;">Thanks for checking out the site! It is still heavily under construction while I'm finishing my Masters.</p>
 
 <div class="titlebar"> <iframe style="margin-top: -20px;" width="672" height="378" src="https://www.youtube.com/embed/EQyq2HPA0jw?si=TIEE831uvFV31Dx3" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe></div>
 
-<p class = "content">Add me on Discord: <a href="https://discord.com/users/662411913195421758" target="_blank"><img src="discord.png" style="width:36px;height:36px;margin-bottom:-10px;"></a></p>
-<p class = "content">Send me an email at catbevan@pm.me: <a href="mailto:catbevan@pm.me" target="_blank"><img src="email.png" style="width:36px;height:36px;margin-bottom:-10px;"></a></p>
-<p class = "content">Check out more of my music on SoundCloud: <a href="https://soundcloud.com/cat-bevan-game-music" target="_blank"><img src="soundcloud.png" style="width:36px;height:36px;margin-bottom:-10px;"></a></p>  
+<p class = "content" style="margin-top:30px;">Add me on Discord: <a href="https://discord.com/users/662411913195421758" target="_blank"><img src="discord.png" style="width:36px;height:36px;margin-bottom:-10px;"></a></p>
+<p class = "content" style="margin-top:10px;">Send me an email at catbevan@pm.me: <a href="mailto:catbevan@pm.me" target="_blank"><img src="email.png" style="width:36px;height:36px;margin-bottom:-10px;"></a></p>
+<p class = "content" style="margin-top:10px;">Check out more of my music on SoundCloud: <a href="https://soundcloud.com/cat-bevan-game-music" target="_blank"><img src="soundcloud.png" style="width:36px;height:36px;margin-bottom:-10px;"></a></p>  
