--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
 
 <div class="titlebar"> <iframe style="margin-top: -20px;" width="672" height="378" src="https://www.youtube.com/embed/EQyq2HPA0jw?si=TIEE831uvFV31Dx3" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe></div>
 
-<p class = "content" style="margin-top:30px;">Add me on Discord: <a href="https://discord.com/users/662411913195421758" target="_blank"><img src="discord.png" style="width:36px;height:36px;margin-bottom:-10px;"></a></p>
+<p class = "content" style="margin-top:30px;">Add me on Discord (username binaryfailure): <a href="https://discord.com/users/662411913195421758" target="_blank"><img src="discord.png" style="width:36px;height:36px;margin-bottom:-10px;"></a></p>
 <p class = "content" style="margin-top:10px;">Send me an email at catbevan@pm.me: <a href="mailto:catbevan@pm.me" target="_blank"><img src="email.png" style="width:36px;height:36px;margin-bottom:-10px;"></a></p>
 <p class = "content" style="margin-top:10px;">Check out more of my music on SoundCloud: <a href="https://soundcloud.com/cat-bevan-game-music" target="_blank"><img src="soundcloud.png" style="width:36px;height:36px;margin-bottom:-10px;"></a></p> 
 <div id="bottom"></div>	
