--- a/index.html
+++ b/index.html
@@ -102,5 +102,5 @@
 <p class = "content" style="margin-top:30px;">Add me on Discord (username binaryfailure): <a href="https://discord.com/users/662411913195421758" target="_blank"><img src="discord.png" style="width:36px;height:36px;margin-bottom:-10px;"></a></p>
 <p class = "content" style="margin-top:10px;">Send me an email at catbevan@pm.me: <a href="mailto:catbevan@pm.me" target="_blank"><img src="email.png" style="width:36px;height:36px;margin-bottom:-10px;"></a></p>
 <p class = "content" style="margin-top:10px;">Check out more of my music on SoundCloud: <a href="https://soundcloud.com/cat-bevan-game-music" target="_blank"><img src="soundcloud.png" style="width:36px;height:36px;margin-bottom:-10px;"></a></p>
-<p class = "content" style="margin-top:10px;">Play the games I've been a part of on Itch: <a href="catbevan.itch.io" target="_blank"><img src="itch.png" style="width:36px;height:36px;margin-bottom:-10px;"></a></p>  
+<p class = "content" style="margin-top:10px;">Play the games I've been a part of on Itch: <a href="https://catbevan.itch.io" target="_blank"><img src="itch.png" style="width:36px;height:36px;margin-bottom:-10px;"></a></p>  
 <div id="bottom"></div>	
