--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
 	<div class="circular-frame" style="background-image: url('img_avatar.png');"></div>
 </div>
 
-<p class = "content" style="margin-top: 30px;margin-bottom: 15px;">Thanks for checking out the site! It is still heavily under construction at the moment. I'd love to get in touch! Links to my socials <a href="#bottom">at the bottom.</a></p>
+<p class = "content" style="margin-top: 30px;margin-bottom: 15px;">Thanks for checking out the site! It is still heavily under construction at the moment, but I'd love to get in touch! Links to my socials <a href="#bottom">at the bottom.</a></p>
 
 <div class="titlebar"> <iframe style="margin-top: -20px;" width="672" height="378" src="https://www.youtube.com/embed/EQyq2HPA0jw?si=TIEE831uvFV31Dx3" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe></div>
 
